move trunk site to unavi-app

--- a/crates/unavi-app/index.html
+++ b/crates/unavi-app/index.html
@@ -6,8 +6,7 @@
     <link
       data-trunk
       rel="copy-dir"
-      href="../../assets"
-      data-target-path="assets"
+      href="assets"
     />
     <link data-trunk rel="copy-dir" href="public" />
     <link data-trunk rel="css" href="/public/style.css" />
