--- a/crates/unavi-app/index.html
+++ b/crates/unavi-app/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link data-trunk rel="copy-dir" href="assets" />
+    <link
+      data-trunk
+      rel="copy-dir"
+      href="../../assets"
+      data-target-path="assets"
+    />
     <link data-trunk rel="copy-dir" href="public" />
     <link data-trunk rel="css" href="/public/style.css" />
     <link data-trunk rel="icon" type="image/ico" href="/public/favicon.svg" />
