--- a/crates/unavi-app/index.html
+++ b/crates/unavi-app/index.html
@@ -12,12 +12,7 @@
     <link data-trunk rel="copy-dir" href="public" />
     <link data-trunk rel="css" href="/public/style.css" />
     <link data-trunk rel="icon" type="image/ico" href="/public/favicon.svg" />
-    <link
-      data-trunk
-      rel="rust"
-      href="../unavi-app/Cargo.toml"
-      data-wasm-opt="z"
-    />
+    <link data-trunk rel="rust" data-wasm-opt="z" />
     <title>UNAVI</title>
   </head>
   <body></body>
